<resources>
    <string name="app_name">ElectricityBillApp</string>
    <string name="last_month_reading_string">Last Month</string>
    <string name="subtitle_string">Calculate the monthly bill amount</string>
    <string name="title_string">Electricity Bill App</string>
    <string name="current_month_reading_string">Current Month</string>
    <string name="electric_meter_string">Electric Meter Reading</string>
    <string name="rate_charge_string">Rate Charge</string>
    <string name="bill_amount_hint_string">Bill Amount</string>
    <string name="bill_amount_text_string">0.0</string>
    <string name="kilowatt_hint_string">kilowatt</string>
    <string name="kilowatt_text_string">0</string>
    <string name="pay_bill_string">Pay Bill</string>
</resources>